--- a/web1/index.html
+++ b/web1/index.html
@@ -53,6 +53,24 @@
                                 <h3 class="recipe-card-name">Spaghetti</h3>
                             </a>
                         </article>
+                        <article class="recipe-card">
+                            <a href="https://www.delish.com/cooking/recipe-ideas/recipes/a58254/best-pulled-pork-recipe/">
+                                <img src="img/pulled-pork.jpg" class="recipe-img" alt="no image">
+                                <h3 class="recipe-card-name">Pulled Pork</h3>
+                            </a>
+                        </article>
+                        <article class="recipe-card">
+                            <a href="https://www.thechunkychef.com/one-pot-chicken-parmesan-pasta/">
+                                <img src="img/parmesan-pasta.jpg" class="recipe-img" alt="no image">
+                                <h3 class="recipe-card-name">Parmesan Pasta</h3>
+                            </a>
+                        </article>
+                        <article class="recipe-card">
+                            <a href="https://www.thechunkychef.com/best-homemade-sloppy-joes/">
+                                <img src="img/sloppy-joe.jpg" class="recipe-img" alt="no image">
+                                <h3 class="recipe-card-name">Sloppy Joe</h3>
+                            </a>
+                        </article>
                     </section>
             </section>
             
