--- a/project5/index.html
+++ b/project5/index.html
@@ -29,6 +29,11 @@
             <h3>Issues:</h3>
             <p>1) Need more data to cycle through.</p>
             <p>2) Ensure I dont repeat the same animals too often.</p>
+            <p>3) Potential Idea: have functionality to turn card then display desc, like a guessing game?</p>
+        </div>
+        <div>
+            <h3>Notes:</h3>
+            <p>Currently Implemented 5 animals to see.</p>
         </div>
     </main>
     <script src="main.js"></script>
