--- a/web1/index.html
+++ b/web1/index.html
@@ -78,7 +78,7 @@
                     <h2>Desserts for Your Sweet Tooth</h2>
                     <section class="recipes">
                         <article class="recipe-card">
-                            <a href="">
+                            <a href="https://www.saveur.com/article/Recipes/Nicks-Supernatural-Brownies/">
                                 <img src="img/brownie.jpg" class="recipe-img" alt="no image">
                                 <h3 class="recipe-card-name">Brownies</h3>
                             </a>
