--- a/web1/index.html
+++ b/web1/index.html
@@ -71,6 +71,12 @@
                                 <h3 class="recipe-card-name">Sloppy Joe</h3>
                             </a>
                         </article>
+                        <article class="recipe-card">
+                            <a href="https://www.spendwithpennies.com/cheesy-chicken-casserole/">
+                                <img src="img/casserole.jpg" class="recipe-img" alt="no image">
+                                <h3 class="recipe-card-name">Chicken Casserole</h3>
+                            </a>
+                        </article>
                     </section>
                 </section>
                 
