--- a/web1/index.html
+++ b/web1/index.html
@@ -77,6 +77,12 @@
                                 <h3 class="recipe-card-name">Chicken Casserole</h3>
                             </a>
                         </article>
+                        <article class="recipe-card">
+                            <a href="https://cooking.nytimes.com/recipes/1016230-robertas-pizza-dough">
+                                <img src="img/nypizza.jpg" class="recipe-img" alt="no image">
+                                <h3 class="recipe-card-name">NY Pizzae</h3>
+                            </a>
+                        </article>
                     </section>
                 </section>
                 
