--- a/web1/index.html
+++ b/web1/index.html
@@ -99,6 +99,20 @@
                     <!----COMING SOON -->
 
                 </section>
+
+                <section id="breads">
+                    <h2>Bake your own Breads</h2>
+                    <section class="recipes">
+                        <article class="recipe-card">
+                            <a href="">
+                                <img src="" class="recipe-img" alt="no image">
+                                <h3 class="recipe-card-name">B</h3>
+                            </a>
+                        </article>
+                        
+                    <!----COMING SOON -->
+
+                </section>
             </section>
         </main>
     </div>
