--- a/web2/index.html
+++ b/web2/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>test</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Guessing Game - Colors</title>
 </head>
 <body>
-
-	<h1>coming soon</h1>
-
+	<section>
+		
+	</section>
 </body>
 </html>
