--- a/web1/index.html
+++ b/web1/index.html
@@ -104,9 +104,9 @@
                     <h2>Bake your own Breads</h2>
                     <section class="recipes">
                         <article class="recipe-card">
-                            <a href="">
+                            <a href="https://kirbiecravings.com/no-yeast-bread/">
                                 <img src="" class="recipe-img" alt="no image">
-                                <h3 class="recipe-card-name">B</h3>
+                                <h3 class="recipe-card-name">Bread without yeast</h3>
                             </a>
                         </article>
                         
