--- a/web1/index.html
+++ b/web1/index.html
@@ -73,7 +73,7 @@
                         </article>
                         <article class="recipe-card">
                             <a href="https://www.spendwithpennies.com/cheesy-chicken-casserole/">
-                                <img src="img/casserole.jpg" class="recipe-img" alt="no image">
+                                <img src="img/chicken-casserole.jpg" class="recipe-img" alt="no image">
                                 <h3 class="recipe-card-name">Chicken Casserole</h3>
                             </a>
                         </article>
@@ -105,7 +105,7 @@
                     <section class="recipes">
                         <article class="recipe-card">
                             <a href="https://kirbiecravings.com/no-yeast-bread/">
-                                <img src="" class="recipe-img" alt="no image">
+                                <img src="img/bread.jpg" class="recipe-img" alt="no image">
                                 <h3 class="recipe-card-name">Bread without yeast</h3>
                             </a>
                         </article>
