--- a/web2/index.html
+++ b/web2/index.html
@@ -6,8 +6,15 @@
 	<title>Guessing Game - Colors</title>
 </head>
 <body>
+	<section id="oclor-box">
+		<div class="color" id="red">red</div>
+		<div class="color" id="green">green</div>
+		<div class="color" id="blue">blue</div>
+		<div class="color" id="yellow">yellow</div>
+		<div class="color" id="purple">purple</div>
+	</section>
 	<section>
-		
+		<h1>Guess a color from the above chart</h1>
 	</section>
 </body>
 </html>
